updated head, removed fixed to top, wasnt working well on mobile

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,7 +1,3 @@
-body {
-    padding-top: 350px;
-}
-
 .head-color {
     background-color: transparent;
     color: transparent;
